--- a/trading-bot/src/main/resources/application.properties
+++ b/trading-bot/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=trading-bot
 
 
 #banco de dados
-spring.datasource.url=jdbc:mysql://localhost/tradingbotibmec
+spring.datasource.url=jdbc:mysql://localhost/mysql
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=mysqlroot
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
