--- a/trading-bot/src/main/resources/application.properties
+++ b/trading-bot/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=trading-bot
 
 #banco de dados
 
-spring.datasource.url=jdbc:mysql://localhost/mysql
+spring.datasource.url=jdbc:mysql://localhost/ibmectradingbot2025
 spring.datasource.username=root
 spring.datasource.password=mysqlroot
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
