--- a/trading-bot/src/main/resources/application.properties
+++ b/trading-bot/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=trading-bot
 
 #banco de dados
 
-spring.datasource.url=jdbc:mysql://localhost/ibmectradingbot2025
-spring.datasource.username=root
-spring.datasource.password=mysqlroot
+spring.datasource.url=jdbc:mysql://ibmectradingbot20252.mysql.database.azure.com:3306/ibmectradingbot2025
+spring.datasource.username=aluno
+spring.datasource.password=Ibmec2025
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
