--- a/.github/workflows/main_tradebot.yml
+++ b/.github/workflows/main_tradebot.yml
@@ -25,13 +25,13 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn -B package --file trading-bot/pom.xml
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}trading-bot/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
