--- a/.github/workflows/main_tradebot.yml
+++ b/.github/workflows/main_tradebot.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}trading-bot/target/*.jar'
+          path: '${{ github.workspace }}/trading-bot/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
