--- a/.github/workflows/main_tradebot.yml
+++ b/.github/workflows/main_tradebot.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy JAR app to Azure Web App - TradeBot
+name: Build and deploy JAR app to Azure Web App - ibmec-trading
 
 on:
   push:
@@ -23,44 +23,27 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+      
+      - name: Install Docker Compose
+        run: |
+          DOCKER_COMPOSE_VERSION=2.20.2
+          sudo curl -L "https://github.com/docker/compose/releases/download/v$DOCKER_COMPOSE_VERSION/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose version
 
       - name: Build with Maven
-        run: mvn -B package --file trading-bot/pom.xml
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: java-app
-          path: '${{ github.workspace }}/trading-bot/target/*.jar'
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-  
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: java-app
+        run: mvn clean package -DskipTests
       
-      - name: Login to Azure
-        uses: azure/login@v2
+      - name: Login Azure Container Registry
+        uses: azure/docker-login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_6261C77E40DA4B158D40E18A1536961E }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FF8FFFC21823497CA7B757894F560CAB }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3BA9D3FADD584BBEBA97A459FCD1EFDD }}
+          login-server: tradebot.azurecr.io
+          username: tradebot
+          password: mdrqWf5eDtOyzUGOxA4w5/DfQ2Wl7qbjhxk4+auJVx+ACRBambwa
+      
+      - name: Build Docker image and Push
+        run: |
+          docker-compose build
+          docker tag trade-bot2:latest tradebot.azurecr.io/trade-bot2:v2
+          docker push tradebot.azurecr.io/trade-bot2:v2
 
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'TradeBot'
-          slot-name: 'Production'
-          package: '*.jar'
-          
